Change layout editor css styles
https://github.com/Polyjuice/Polyjuice/issues/45

--- a/src/juicy-tile-editor.html
+++ b/src/juicy-tile-editor.html
@@ -10,12 +10,12 @@
         .sidebar {
             position: fixed;
             width: 220px;
-            background: white;
             border: 1px solid black;
-            opacity: 0.85;
             overflow: auto;
             padding:0px 5px;
             height:220px;
+            background-color:#404040;
+            color:#F0F0F0;
         }
 
         .sidebar h1 {
@@ -27,52 +27,52 @@
         }
 
         .sidebar.left {
-            left:5px;
-            top: 65px;
-            height: calc(100% - 70px);
+            left:0px;
+            top: 60px;
+            height: calc(100% - 60px);
         }
 
         .sidebar.right {
-            right:5px;
-            top: 65px;
-            height: calc(100% - 70px);
+            right:0px;
+            top: 60px;
+            height: calc(100% - 60px);
         }
 
         .sidebar.top {
             height:150px;
-            top:5px;
-            left:5px;
-            width: calc(100% - 15px);
+            top:0px;
+            left:0px;
+            width: calc(100% - 5px);
         }
 
         .sidebar.bottom {
             top:initial;
             height:150px;
-            bottom:5px;
-            left:5px;
-            width: calc(100% - 15px);
+            bottom:0px;
+            left:0px;
+            width: calc(100% - 5px);
         }
 
         .sidebar.left-top {
-            left:5px;
+            left:0px;
             width:220px;
             height:220px;
-            top:5px;
+            top:0px;
         }
 
         .sidebar.right-top {
             left:initial;
-            right:5px;
+            right:0px;
             width:220px;
             height:220px;
-            top:5px;
+            top:0px;
         }
 
         .sidebar.left-bottom {
-            left:5px;
+            left:0px;
             width:220px;
             height:220px;
-            bottom:5px;
+            bottom:0px;
             top:initial;
         }
 
