--- a/src/juicy-tile-tree.html
+++ b/src/juicy-tile-tree.html
@@ -35,7 +35,7 @@
           }
 
           li span.highlight {
-              background-color: blue;
+              background-color: #7f86a7;
               color: white;
           }
 
