--- a/src/juicy-tile-editor-form.html
+++ b/src/juicy-tile-editor-form.html
@@ -273,7 +273,7 @@
         <h4>Container</h4>
 
           <div class="toolbar-item" data-applyvalue="id" disabled?="{{!isSingleSelection}}">
-              <input placeholder="multiple" type="text" class="handle toolbar-button" value="{{id}}" update-on="input" />
+              <input placeholder="multiple" type="text" class="handle toolbar-button" value="{{itemId}}" update-on="input" />
               <label class="toolbar-label">ID</label>
           </div>
 
