Remove shadow overlay
https://github.com/Polyjuice/Polyjuice/issues/47

--- a/src/juicy-tile-editor.html
+++ b/src/juicy-tile-editor.html
@@ -137,9 +137,9 @@
           </div>
       </juicy-draggable>
 
-    <juicy-highlight id="tileEdited" overlay strokeWidth="3" strokeColor="#33579F" strokeOffset="3"></juicy-highlight>
+    <juicy-highlight id="tileEdited" strokeWidth="2" strokeColor="#fd7f02" strokeOffset="4"></juicy-highlight>
     <juicy-highlight id="tileRollover" strokeWidth="1" strokeColor="#222222" strokeOffset="4"></juicy-highlight>
-    <juicy-highlight id="tileSelected" strokeWidth="1" strokeColor="#33579F" strokeOffset="3"></juicy-highlight>
+    <juicy-highlight id="tileSelected" strokeWidth="1" strokeColor="#fd7f02" strokeOffset="3"></juicy-highlight>
   </template>
   <script src="juicy-tile-editor.js"></script>
 </polymer-element>
