Increase top panel buttons size
https://github.com/Polyjuice/Launcher/issues/120

--- a/src/juicy-tile-editor-form.html
+++ b/src/juicy-tile-editor-form.html
@@ -103,7 +103,8 @@
       }
 
       .toolbar-button {
-        height: 20px;
+        height: 25px;
+        min-width: 25px;
         display: block;
         white-space: nowrap;
         box-sizing: border-box;
@@ -111,6 +112,7 @@
         border: none;
         padding: 0px;
         margin: 0px;
+        font-size: 15px;
       }
 
         .toolbar-button-half {
@@ -141,7 +143,12 @@
 
       .toolbar-button input{
         border: 1px solid #333;
+        font-size: 12px;
       }
+
+        input.toolbar-button {
+            font-size: 12px;
+        }
 
       .toolbar-button button{
         margin: 0 0 0 -1px;
@@ -162,7 +169,7 @@
       .directionGroup{
         background-color: #e5e7ed;
         border-radius: 1px;
-        height:20px;
+        height:25px;
       }
       .directionGroup .toolbar-button {
           float:left;
