Improve juicy-draggable element
Improve juicy-draggable element
Add juicy-draggable example page

--- a/src/juicy-draggable.html
+++ b/src/juicy-draggable.html
@@ -1,6 +1,6 @@
 ﻿<link rel="import" href="../../polymer/polymer.html" />
 
-<polymer-element name="juicy-draggable" attributes="elementId handleId position">
+<polymer-element name="juicy-draggable" attributes="elementId handleId position dropSelector dragHelperClass dragHoverClass draggingClass">
     <template>
         <style>
         </style>
