Drag'n'drop of elements inside the sidebar
https://github.com/Juicy/juicy-tile-editor/issues/15

--- a/src/juicy-tile-editor.html
+++ b/src/juicy-tile-editor.html
@@ -135,7 +135,8 @@
                             on-juicy-tile-tree-highlight-remove="{{treeHighlightRemoveAction}}"
                             on-juicy-tile-tree-refresh-tile-list="{{refreshTileList}}"
                             on-juicy-tile-tree-hover="{{treeHoverAction}}"
-                            on-juicy-tile-tree-blur="{{treeBlurAction}}"></juicy-tile-tree>
+                            on-juicy-tile-tree-blur="{{treeBlurAction}}"
+                            on-juicy-tile-tree-drag-item-stop="{{treeItemDragStop}}"></juicy-tile-tree>
           </div>
       </juicy-draggable>
 
