--- a/src/juicy-tile-editor-form.html
+++ b/src/juicy-tile-editor-form.html
@@ -1,7 +1,8 @@
-﻿<link rel="import" href="../../polymer/polymer.html">
-<link rel="import" href="../../core-selector/core-selector.html">
-<link rel="import" href="../../juicy-popover/src/juicy-popover.html">
-<link rel="import" href="juicy-color-picker.html">
+﻿<link rel="import" href="../../polymer/polymer.html" />
+<link rel="import" href="../../core-selector/core-selector.html" />
+<link rel="import" href="../../juicy-popover/src/juicy-popover.html" />
+<link rel="import" href="juicy-color-picker.html" />
+<link rel="import" href="juicy-border-picker.html" />
 
 <polymer-element name="juicy-tile-editor-form" attributes="selectedItems editedTiles">
   <template>
@@ -325,6 +326,18 @@
           </juicy-popover>
           <label class="toolbar-label">Background</label>
         </div>
+
+          <div class="toolbar-item" disabled?="{{!isSelection}}" data-applyvalue="border">
+              <juicy-popover>
+                  <button class="handle toolbar-button toolbar-button-background">
+                      <span style="margin-top: -10px; width: 100%; display: inline-block; border-bottom: {{border}}"></span>
+                  </button>
+                  <div class="expandable">
+                      <juicy-border-picker value="{{border}}" on-juicy-border-picker-value-changed="{{applyChange}}"></juicy-border-picker>
+                  </div>
+              </juicy-popover>
+              <label class="toolbar-label">Border</label>
+          </div>
 
         <div class="toolbar-item" disabled?="{{!isContainer}}" data-applyvalue="gutter">
           <juicy-popover>
