--- a/src/juicy-tile-editor.html
+++ b/src/juicy-tile-editor.html
@@ -14,8 +14,11 @@
             overflow: auto;
             padding:0px 5px;
             height:220px;
-            background-color:#404040;
-            color:#F0F0F0;
+            background-color:#252526;
+            color:#FFF;
+            font-family: 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
+            font-size:11px;
+            line-height:23px;
         }
 
         .sidebar h1 {
